force-app/main/default/objects/SEG_Auditoria__c/SEG_Auditoria__c.object-meta.xml
<CustomObject>
    <label>Auditoría</label>
    <nameField>
        <displayFormat>FA-{0000000}</displayFormat>
        <label>Auditoría Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auditorias</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>