force-app/main/default/objects/SEG_Auditoria__c/fields/NIF_FechaAuditoria__c.field-meta.xml
<CustomField>
    <fullName>NIF_FechaAuditoria__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <label>Fichas Duplicadas</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>