force-app/main/default/objects/SEG_Auditoria__c/fields/SAC_Activo__c.field-meta.xml
<CustomField>
    <fullName>SAC_Activo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Campo para activar o desactivar una auditoría</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>