force-app/main/default/objects/SEG_Auditoria__c/fields/SAC_AuditoriaGeneral__c.field-meta.xml
<CustomField>
    <fullName>SAC_AuditoriaGeneral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para relacionar las auditorias hijas con su auditoría padre</description>
    <label>Auditoría</label>
    <referenceTo>SEG_Auditoria__c</referenceTo>
    <relationshipLabel>Auditorias de reclamaciones</relationshipLabel>
    <relationshipName>Auditorias</relationshipName>
    <type>Lookup</type>
</CustomField>