force-app/main/default/objects/SEG_Auditoria__c/fields/SAC_Estado__c.field-meta.xml
<CustomField>
    <fullName>SAC_Estado__c</fullName>
    <description>Campo para informar el estado en el que se encuentra una auditoria</description>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAC_Pendiente</fullName>
                <default>true</default>
                <label>Pendiente</label>
            </value>
            <value>
                <fullName>SAC_Completada</fullName>
                <label>Completada</label>
            </value>
            <value>
                <fullName>SAC_Revisada</fullName>
                <label>Revisada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>