force-app/main/default/objects/SEG_Auditoria__c/fields/SAC_FechaCierre__c.field-meta.xml
<CustomField>
    <fullName>SAC_FechaCierre__c</fullName>
    <description>Campo para almacenar la fecha de cierre de los criterios de auditoría en el formato de sf</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha cierre</label>
    <length>30</length>
    <type>Text</type>
</CustomField>