force-app/main/default/objects/SEG_Auditoria__c/fields/SAC_FechaFin__c.field-meta.xml
<CustomField>
    <fullName>SAC_FechaFin__c</fullName>
    <description>Campo para informar la fecha de fin de las auditorías automáticas</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha fin</label>
    <type>Date</type>
</CustomField>