force-app/main/default/objects/SEG_Auditoria__c/fields/SAC_FechaInicio__c.field-meta.xml
<CustomField>
    <fullName>SAC_FechaInicio__c</fullName>
    <description>Campo para informar la fecha de inicio de las auditorías automáticas</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha inicio</label>
    <type>Date</type>
</CustomField>