force-app/main/default/objects/SEG_Auditoria__c/fields/SAC_FechaUltimaEjecucion__c.field-meta.xml
<CustomField>
    <fullName>SAC_FechaUltimaEjecucion__c</fullName>
    <description>Campo para almacenar la fecha de ultima ejecución de una auditoria programada</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha última ejecución</label>
    <type>DateTime</type>
</CustomField>