force-app/main/default/objects/SEG_Auditoria__c/fields/SAC_GrupoLetrado__c.field-meta.xml
<CustomField>
    <fullName>SAC_GrupoLetrado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para informar el grupo letrado de la reclamación para generar una auditoria</description>
    <label>Despachos</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_Grupo_Colaborador__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Letrados</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CC_Grupo_Colaborador__c</referenceTo>
    <relationshipLabel>Auditorias (Despachos)</relationshipLabel>
    <relationshipName>Auditorias1</relationshipName>
    <type>Lookup</type>
</CustomField>