force-app/main/default/objects/SEG_Auditoria__c/fields/SAC_GrupoProveedor__c.field-meta.xml
<CustomField>
    <fullName>SAC_GrupoProveedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para informar el grupo proveedor de la reclamación para generar una auditoria</description>
    <label>Grupo Proveedor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_Grupo_Colaborador__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Grupo proveedores</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CC_Grupo_Colaborador__c</referenceTo>
    <relationshipLabel>Auditorias (Grupo Proveedor)</relationshipLabel>
    <relationshipName>Auditorias</relationshipName>
    <type>Lookup</type>
</CustomField>