force-app/main/default/objects/SEG_Auditoria__c/fields/SAC_GrupoResponsableResolver__c.field-meta.xml
<CustomField>
    <fullName>SAC_GrupoResponsableResolver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para informar el grupo responsable de la auditoria</description>
    <label>Grupo responsable</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
        <filterItems>
            <field>CC_Grupo_Colaborador__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Grupo proveedores</value>
        </filterItems>
        <filterItems>
            <field>CC_Grupo_Colaborador__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Letrados</value>
        </filterItems>
        <filterItems>
            <field>CC_Grupo_Colaborador__c.SAC_DeveloperName__c</field>
            <operation>equals</operation>
            <value>COPS</value>
        </filterItems>
        <filterItems>
            <field>CC_Grupo_Colaborador__c.SAC_DeveloperName__c</field>
            <operation>equals</operation>
            <value>AJ</value>
        </filterItems>
        <filterItems>
            <field>CC_Grupo_Colaborador__c.SAC_DeveloperName__c</field>
            <operation>equals</operation>
            <value>SAC_AUDITORES</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CC_Grupo_Colaborador__c</referenceTo>
    <relationshipLabel>Auditorias (Grupo responsable)</relationshipLabel>
    <relationshipName>Auditorias2</relationshipName>
    <type>Lookup</type>
</CustomField>