force-app/main/default/objects/SEG_Auditoria__c/fields/SAC_ImporteAbonadoDesde__c.field-meta.xml
<CustomField>
    <fullName>SAC_ImporteAbonadoDesde__c</fullName>
    <description>Campo para informar el importe abonado desde al generar una auditoria</description>
    <label>Importe abonado desde</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>