force-app/main/default/objects/SEG_Auditoria__c/fields/SAC_ImporteAbonadoHasta__c.field-meta.xml
<CustomField>
    <fullName>SAC_ImporteAbonadoHasta__c</fullName>
    <description>Campo para informar el importe abonado hasta al generar una auditoria</description>
    <label>Importe abonado hasta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>