force-app/main/default/objects/SEG_Auditoria__c/fields/SAC_Letrado__c.field-meta.xml
<CustomField>
    <fullName>SAC_Letrado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para informar el letrado sobre el que se filtra la auditoría</description>
    <label>Letrado</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Auditorias1</relationshipName>
    <type>Lookup</type>
</CustomField>