force-app/main/default/objects/SEG_Auditoria__c/fields/SAC_MCCProducto__c.field-meta.xml
<CustomField>
    <fullName>SAC_MCCProducto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para informar el MCC Producto al generar una auditoria</description>
    <label>Producto</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_MCC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>B - Producto/Servicio</value>
        </filterItems>
        <filterItems>
            <field>$Source.SAC_MCCTematica__c</field>
            <operation>equals</operation>
            <valueField>CC_MCC__c.CC_Tematica__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipLabel>Auditorias (Producto)</relationshipLabel>
    <relationshipName>Auditorias1</relationshipName>
    <type>Lookup</type>
</CustomField>