force-app/main/default/objects/SEG_Auditoria__c/fields/SAC_MCCTematica__c.field-meta.xml
<CustomField>
    <fullName>SAC_MCCTematica__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para informar el MCC Temática al generar una auditoria</description>
    <label>Temática</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_MCC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>A - Temática</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipLabel>Auditorias (Temática)</relationshipLabel>
    <relationshipName>Auditorias</relationshipName>
    <type>Lookup</type>
</CustomField>