force-app/main/default/objects/SEG_Auditoria__c/fields/SAC_NombreAuditoria__c.field-meta.xml
<CustomField>
    <fullName>SAC_NombreAuditoria__c</fullName>
    <description>Campo para informar el nombre de la Auditoria</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>