force-app/main/default/objects/SEG_Auditoria__c/fields/SAC_NumMaxReclamaciones__c.field-meta.xml
<CustomField>
    <fullName>SAC_NumMaxReclamaciones__c</fullName>
    <description>Indica el número máximo de reclamaciones de una auditoría</description>
    <label>Número máximo reclamaciones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>