force-app/main/default/objects/SEG_Auditoria__c/fields/SAC_PeriocidadEjecucion__c.field-meta.xml
<CustomField>
    <fullName>SAC_PeriocidadEjecucion__c</fullName>
    <description>Campo para detallar la periocidad de ejecución de las auditorías automáticas</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Periocidad de ejecución</label>
    <length>150</length>
    <type>Text</type>
</CustomField>