force-app/main/default/objects/SEG_Auditoria__c/fields/SAC_PorcentajeAcierto__c.field-meta.xml
<CustomField>
    <fullName>SAC_PorcentajeAcierto__c</fullName>
    <description>Campo para informar el % de reclamaciones OK respecto al total en una auditoria sac</description>
    <encryptionScheme>None</encryptionScheme>
    <label>% OKs</label>
    <length>10</length>
    <type>Text</type>
</CustomField>