force-app/main/default/objects/SEG_Auditoria__c/fields/SAC_Reclamacion__c.field-meta.xml
<CustomField>
    <fullName>SAC_Reclamacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para informar la reclamación relacionada con la auditoría</description>
    <label>Reclamacion</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Auditorias (Reclamacion)</relationshipLabel>
    <relationshipName>Auditorias1</relationshipName>
    <type>Lookup</type>
</CustomField>