force-app/main/default/objects/SEG_Auditoria__c/fields/SAC_SentidoResolucion__c.field-meta.xml
<CustomField>
    <fullName>SAC_SentidoResolucion__c</fullName>
    <description>Campo para informar el sentido de resolución de las reclamaciones al generar una auditoria</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sentido resolución</label>
    <length>255</length>
    <type>Text</type>
</CustomField>