force-app/main/default/objects/SEG_Auditoria__c/fields/SAC_SLACalidad__c.field-meta.xml
<CustomField>
    <fullName>SAC_SLACalidad__c</fullName>
    <description>Campo para informar el campo SLA Calidad en creador de auditorias</description>
    <label>SLA Calidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAC_SLACalidadTrue</fullName>
                <label>Sí</label>
            </value>
            <value>
                <fullName>SAC_SLACalidadFalse</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>