force-app/main/default/objects/SEG_Auditoria__c/fields/SAC_SoloPretPpal__c.field-meta.xml
<CustomField>
    <fullName>SAC_SoloPretPpal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo booleano para indicar si solo buscar reclamaciones por su pretensión principal o por cualquiera de sus pretensiones</description>
    <label>Tomar solo pretensión principal</label>
    <type>Checkbox</type>
</CustomField>