force-app/main/default/objects/SEG_Auditoria__c/fields/SAC_Tipo__c.field-meta.xml
<CustomField>
    <fullName>SAC_Tipo__c</fullName>
    <description>Campo para seleccionar el tipo de auditoría</description>
    <label>Tipo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAC_Altas</fullName>
                <label>Alta</label>
            </value>
            <value>
                <fullName>SAC_Subsanacion</fullName>
                <label>Subsanación</label>
            </value>
            <value>
                <fullName>SAC_Analisis</fullName>
                <label>Análisis</label>
            </value>
            <value>
                <fullName>SAC_Negociacion</fullName>
                <label>Negociación</label>
            </value>
            <value>
                <fullName>SAC_Resolucion</fullName>
                <label>Resolución</label>
            </value>
            <value>
                <fullName>SAC_Ejecucion</fullName>
                <label>Ejecución</label>
            </value>
            <value>
                <fullName>SAC_Derivacion</fullName>
                <label>Derivación</label>
            </value>
            <value>
                <fullName>SAC_Todas</fullName>
                <label>Todas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>