force-app/main/default/objects/SEG_Auditoria__c/fields/SAC_TotalKo__c.field-meta.xml
<CustomField>
    <fullName>SAC_TotalKo__c</fullName>
    <description>Campo que informa el número de auditorías de reclamación con dictamen KO</description>
    <label>Total KO</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>