force-app/main/default/objects/SEG_Auditoria__c/fields/SAC_TotalNoAplica__c.field-meta.xml
<CustomField>
    <fullName>SAC_TotalNoAplica__c</fullName>
    <description>Campo que informa el número de auditorías de reclamación con dictamen N/A</description>
    <label>Total N/A</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>