force-app/main/default/objects/SEG_Auditoria__c/fields/SAC_TotalOk__c.field-meta.xml
<CustomField>
    <fullName>SAC_TotalOk__c</fullName>
    <description>Campo que informa el número de auditoría de reclamación con dictamen OK</description>
    <label>Total OK</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>