force-app/main/default/objects/SEG_Auditoria__c/fields/SAC_TotalPendientes__c.field-meta.xml
<CustomField>
    <fullName>SAC_TotalPendientes__c</fullName>
    <description>Campo que informa el número de auditorías de reclamación con dictamen Pendiente</description>
    <label>Total Ptes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>