force-app/main/default/objects/SEG_Auditoria__c/fields/SAC_TotalReclamacionesAuditadas__c.field-meta.xml
<CustomField>
    <fullName>SAC_TotalReclamacionesAuditadas__c</fullName>
    <description>Informa en número total de reclamaciones que han sido auditadas en una auditoría en concreto</description>
    <label>Total reclamaciones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>