force-app/main/default/objects/SEG_Auditoria__c/fields/SEG_CuentaCargo__c.field-meta.xml
<CustomField>
    <fullName>SEG_CuentaCargo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cuenta Cargo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>