force-app/main/default/objects/SEG_Auditoria__c/fields/SEG_Destinatarioemail__c.field-meta.xml
<CustomField>
    <fullName>SEG_Destinatarioemail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Destinatario email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>