force-app/main/default/objects/SEG_Auditoria__c/fields/SEG_FAuditoria__c.field-meta.xml
<CustomField>
    <fullName>SEG_FAuditoria__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SEG_FAuditoria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>