force-app/main/default/objects/SEG_Auditoria__c/fields/SEG_FechaAuditoria__c.field-meta.xml
<CustomField>
    <fullName>SEG_FechaAuditoria__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Auditoría</label>
    <type>Date</type>
</CustomField>