force-app/main/default/objects/SEG_Auditoria__c/fields/SEG_FechaAuditoriaFormato__c.field-meta.xml
<CustomField>
    <fullName>SEG_FechaAuditoriaFormato__c</fullName>
    <formula>LPAD(TEXT(MONTH(SEG_FechaAuditoria__c)), 2, &apos;0&apos;) + &apos;/&apos; + 
TEXT(YEAR(SEG_FechaAuditoria__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Auditoría</label>
    <type>Text</type>
</CustomField>