force-app/main/default/objects/SEG_Auditoria__c/fields/SEG_Idioma__c.field-meta.xml
<CustomField>
    <fullName>SEG_Idioma__c</fullName>
    <label>Idioma</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
                <label>C: Catalan</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>E: Castellano</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>I: Ingles</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>