force-app/main/default/objects/SEG_Auditoria__c/fields/SEG_Motivo_error__c.field-meta.xml
<CustomField>
    <fullName>SEG_Motivo_error__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Motivo de error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>