force-app/main/default/objects/SEG_Auditoria__c/fields/SEG_NIF__c.field-meta.xml
<CustomField>
    <fullName>SEG_NIF__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NIF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>