force-app/main/default/objects/SEG_Auditoria__c/fields/SEG_NumeroSR__c.field-meta.xml
<CustomField>
    <fullName>SEG_NumeroSR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Número del caso</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Debe asociarse a una SR con CR de Auditoría.</errorMessage>
        <filterItems>
            <field>Case.SEG_SRAuditoria__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Fichas de Auditoría</relationshipLabel>
    <relationshipName>Auditorias</relationshipName>
    <type>Lookup</type>
</CustomField>