force-app/main/default/objects/SEG_Auditoria__c/fields/SEG_Organizacion__c.field-meta.xml
<CustomField>
    <fullName>SEG_Organizacion__c</fullName>
    <formula>TEXT( SEG_NumeroSR__r.SEG_Organizacion__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organización</label>
    <type>Text</type>
</CustomField>