force-app/main/default/objects/SEG_Auditoria__c/fields/SEG_Resultado__c.field-meta.xml
<CustomField>
    <fullName>SEG_Resultado__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resultado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>