force-app/main/default/objects/SEG_Auditoria__c/fields/SEG_Zona__c.field-meta.xml
<CustomField>
    <fullName>SEG_Zona__c</fullName>
    <formula>TEXT( SEG_NumeroSR__r.SEG_Zona__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zona</label>
    <type>Text</type>
</CustomField>