force-app/main/default/objects/SEG_Auditoria__c/recordTypes/SAC_Auditoria.recordType-meta.xml
<RecordType>
    <fullName>SAC_Auditoria</fullName>
    <active>true</active>
    <description>RecordType del objeto SEG_Auditoría</description>
    <label>Auditoria</label>
</RecordType>