force-app/main/default/objects/SEG_Auditoria__c/recordTypes/SAC_AuditoriaAutomatica.recordType-meta.xml
<RecordType>
    <fullName>SAC_AuditoriaAutomatica</fullName>
    <active>true</active>
    <description>RT para la creación de auditorias automáticas</description>
    <label>Auditoria Automatica</label>
</RecordType>