force-app/main/default/objects/SEG_Auditoria__c/recordTypes/SAC_AuditoriaGeneral.recordType-meta.xml
<RecordType>
    <fullName>SAC_AuditoriaGeneral</fullName>
    <active>true</active>
    <description>Recordtype de la Auditoria General</description>
    <label>Auditoria General</label>
</RecordType>