force-app/main/default/objects/SEG_Auditoria__c/recordTypes/SEG_Auditorias.recordType-meta.xml
<RecordType>
    <fullName>SEG_Auditorias</fullName>
    <active>true</active>
    <description>RecordType del objeto SEG_Auditoria para Segmentos</description>
    <label>SEG Auditorias</label>
</RecordType>