force-app/main/default/objects/SEG_Auditoria__c/validationRules/SAC_ActivarAuditoria.validationRule-meta.xml
<ValidationRule>
    <fullName>SAC_ActivarAuditoria</fullName>
    <active>true</active>
    <description>Validación para que solo los usuarios pertenecientes al grupo responsable de la auditoría puedan editar el campo activo de la auditoria</description>
    <errorConditionFormula>AND(
NOT($Permission.CBK_BypassValidationRules),
NOT($Permission.SAC_ByPass),
OR(
 IF(ISCHANGED(SAC_Activo__c) || ISCHANGED(SAC_FechaFin__c), IF($User.SAC_PerteneceCOPSAJ__c, false, IF(SAC_EsMiGrupo__c, false, true)), false) 				
) 
)</errorConditionFormula>
    <errorMessage>No puede modificar este campo. Este usuario no pertenece al grupo responsable de la auditoría.</errorMessage>
</ValidationRule>