force-app/main/default/objects/SEG_Auditoria__c/validationRules/SEG_DireccionesEmail.validationRule-meta.xml
<ValidationRule>
    <fullName>SEG_DireccionesEmail</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(SEG_Destinatarioemail__c, &quot;;&quot;)</errorConditionFormula>
    <errorDisplayField>SEG_Destinatarioemail__c</errorDisplayField>
    <errorMessage>Las direcciones deben estar separadas por coma y no por punto y coma.</errorMessage>
</ValidationRule>