force-app/main/default/objects/SEG_Auditoria__c/validationRules/SEG_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>SEG_Owner</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;SEG_Auditorias&apos;, $User.Id  &lt;&gt;  SEG_NumeroSR__r.Owner:User.Id &amp;&amp; NOT($Permission.SEG_CrearAuditoriaSinOwnerCaso))</errorConditionFormula>
    <errorMessage>Solo el owner del caso puede crear fichas de auditoría.</errorMessage>
</ValidationRule>