force-app/main/default/objects/SEG_Auditoria__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SEG_FechaAuditoriaFormato__c</columns>
    <columns>SEG_NumeroSR__c</columns>
    <columns>SEG_Destinatarioemail__c</columns>
    <columns>SEG_Centro__c</columns>
    <columns>SEG_Comision__c</columns>
    <columns>SEG_Idioma__c</columns>
    <columns>SEG_Resultado__c</columns>
    <columns>SEG_NIF__c</columns>
    <columns>SEG_Organizacion__c</columns>
    <columns>SEG_Zona__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>