force-app/main/default/objects/SEG_Auditoria__c/listViews/SAC_AuditoriasMisGrupos.listView-meta.xml
<ListView>
    <fullName>SAC_AuditoriasMisGrupos</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>SAC_NombreAuditoria__c</columns>
    <columns>SAC_SLACalidad__c</columns>
    <columns>SAC_FechaCierreDesde__c</columns>
    <columns>SAC_FechaCierreHasta__c</columns>
    <columns>SAC_TotalReclamacionesAuditadas__c</columns>
    <columns>SAC_TotalOk__c</columns>
    <columns>SAC_PorcentajeAcierto__c</columns>
    <columns>SAC_TotalKo__c</columns>
    <columns>SAC_TotalNoAplica__c</columns>
    <columns>SAC_TotalPendientes__c</columns>
    <columns>SAC_Estado__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SEG_Auditoria__c.SAC_AuditoriaGeneral</value>
    </filters>
    <filters>
        <field>SAC_EsMiGrupo__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>SAC_AuditoriaGeneral__c</field>
        <operation>equals</operation>
    </filters>
    <label>SAC- Auditorías manuales (mis grupos)</label>
    <sharedTo>
        <role>SAC_General</role>
    </sharedTo>
</ListView>